Fixed homepage and icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:400,700|Cabin">
 	<link rel="icon" type="image/png" href="img/dbFavicon.png">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-	<link rel="stylesheet" href="{{ '/assets/css/brands.css' | relative_url }}">
-
+	<script src="https://kit.fontawesome.com/04b6d6fa35.js" crossorigin="anonymous"></script>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script><!--jquery-->
 	<script type="text/javascript"  src="{{ site.baseurl }}/assets/js/sideNav.js"> </script> <!-- our own js file-->
 </head>
