--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -4,4 +4,8 @@ footer {
     padding: 64px, 0, 64px, 0;
     height: 200px;
     background-color: rgba(0, 0, 0, 0.8);
+
+    .fa {
+        font-size: 2.5rem;
+    }
 }
