--- a/_includes/side-nav.html
+++ b/_includes/side-nav.html
@@ -31,6 +31,10 @@
         <a href="https://tiktok.com/@ucsdbragondoat">
             <i class="fa-brands fa-tiktok"></i>
         </a>
+        <br />
+        <a href="https://linktr.ee/ucsddb" style="font-size: 2rem;">
+            Linktree
+        </a>
     </div>
 </div>
 <span class="sideNav_button sideDetect" id="btnSideToggle">&#9776</span>
