began adding race resulting bblb23

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{ page.title }} | {{ site.title }}</title>
+	<title>| {{ site.title }}</title>
 	<meta name="description" content="The Official Home Page of the UCSD Dragon Boat Team">
 	<meta name="author" description="UCSD Dragon Boat">
 	<meta name="google-site-verification" content="2JjtZlMWhG8jtZbgZr6KblhSsb59N10OEYGkNbS7e5w" />
