--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -456,8 +456,7 @@ body
   background: linear-gradient(
       rgba(0, 0, 0, 0.25), 
       rgba(0, 0, 0, 0.25)
-    ),
-  url("../img/header2.jpg");
+    );
 
   background-attachment: fixed;
   background-repeat: no-repeat;
