--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -756,7 +756,42 @@ body
 
 }
 
+.table-race-info {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 80%;
+}
 
+.round-toggle-cont {
+  display: flex;
+}
+
+.round-toggle-btn {
+  font-size: 80%;
+  font-style: italic;
+  font-weight: normal;
+  border: 1px #1e4394 solid;
+  background-color: #1e439415;
+  border-radius: 0.3em;
+  padding: 0em 0.3em;
+  margin-top: 0.2em;
+  margin-right: 0.4em;
+  cursor: pointer;
+}
+
+.time-info-cont {
+  display: flex;
+  justify-content: space-between;
+}
+
+.time-info-cont img {
+  width: 0.9em;
+  padding-left: 0.3em;
+  cursor: pointer;
+  // Same dark blue color as text: https://codepen.io/sosuke/pen/Pjoqqp
+  filter: invert(19%) sepia(25%) saturate(6306%) hue-rotate(211deg) brightness(91%) contrast(87%);
+}
 
 
 
