--- a/_includes/race-table.html
+++ b/_includes/race-table.html
@@ -1,45 +1,48 @@
 <div>
+    {% assign raceId = include.race-info.raceId %}
     <p class="race_name">
         <a href="{{ include.race-info.resultsLink }}" target="_blank">
             {{ include.race-info.raceName }}
         </a>
     </p>
     <table class="results_table">
-        <tr>
+        <thead>
             <th colspan="3">
-                <div class="table-race-info">
+                <div class="race_table_header">
                     <span>{{ include.race-info.raceLocation }}</span>
                     <span>{{ include.race-info.raceDate }}</span>
                 </div>
-                <div class="round-toggle-cont">
+                <div class="race_table_rounds_cont">
                     {% for round in include.race-info.rounds %}
-                    {% assign roundId = round.roundName | append: include.race-info.raceId | remove: ' ' %}
-                    <div class="round-toggle-btn" id="{{ roundId }}">{{ round.roundName }}</div>
+                    {% assign roundId = round.roundName | append: raceId | remove: ' ' %}
+                    <div class="race_round_tab" id="{{ roundId }}">
+                        {{ round.roundName }}
+                    </div>
                     {% endfor %}
                 </div>
             </th>
-        </tr>
+        </thead>
         {% for round in include.race-info.rounds %}
-        {% assign roundId = round.roundName | append: include.race-info.raceId | remove: ' ' %}
+        {% assign roundId = round.roundName | append: raceId | remove: ' ' %}
         <tbody id="{{ roundId | append: '-body' }}">
             {% for event in round.events %}
-            {% assign eventId = roundId | append: event.eventName | remove: ' ' %}
+            {% assign eventId = event.eventName | append: roundId | remove: ' ' %}
             <tr>
                 <td>{{ event.eventName }}</td>
                 <td>{{ event.place }}</td>
                 <td>
-                    <span class="table-clickable time-info" id="{{ eventId }}">
+                    <span class="table_clickable" id="{{ eventId }}">
                         {{ event.time }}
                     </span>
                 </td>
             </tr>
             <tr>
-                <td colspan="3" class="race-event-info" id="{{ eventId | append: '-body' }}">   
-                    <a class="table-clickable watch-race" href="{{ event.videoLink }}" target="_blank">
+                <td colspan="3" class="event_ranking_body" id="{{ eventId | append: '-body' }}">   
+                    <a class="table_clickable race_video_link" href="{{ event.videoLink }}" target="_blank">
                         Watch Race - {{ event.eventName }} - {{ round.roundName }}
                     </a>
                     {% for boat in event.ranking %}
-                    <div class="ranking-cont">
+                    <div class="race_ranking_cont">
                         <span>{{ boat.boatName }}</span>
                         <span>{{ boat.time }}</span>
                     </div>
@@ -52,41 +55,64 @@
     </table>
 </div>
 <script>
-    // Enable tabs for switching between tabs.
-    for (const roundButton of document.querySelectorAll(".round-toggle-btn")) {
-        roundButton.addEventListener('click', (event) => {
-            for (const button of document.querySelectorAll(".round-toggle-btn")) {
-                if (button.id == event.srcElement.id) {
-                    // Button was selected.
-                    button.style.background = "#1e439415"; // Light blue background color.
-                    button.style.cursor = "default";
-                    document.querySelector(`#${button.id}-body`).style.display = 'block';
-                } else {
-                    // Button is not selected.
-                    button.style.background = 'white';
-                    button.style.cursor = "pointer";
-                    document.querySelector(`#${button.id}-body`).style.display = 'none';
-                }
+// Buttons for switching between race rounds.
+const raceRoundTabs = [];
+'{% for round in include.race-info.rounds %}'
+    raceRoundTabs.push(document.querySelector('#{{ round.roundName | append: raceId }}'));
+'{% endfor %}'
+// const raceRoundTabs = document.querySelectorAll('.tabs{{ raceId }}');
+for (const raceRoundTab of raceRoundTabs) {
+    raceRoundTab.addEventListener('click', () => {
+        // When a race round button is pressed, go through all the race-round tables
+        // and toggle their visibility. Set the race round body corresponding to the
+        // pressed button and turn its visibility on, and turn off other race rounds'
+        // visibiilties.
+        for (const otherRaceRoundTab of raceRoundTabs) {
+            const raceRoundBody = document.querySelector(`#${otherRaceRoundTab.id}-body`);
+            if (otherRaceRoundTab.id == raceRoundTab.id) {
+                // This round was selected.
+                otherRaceRoundTab.style.background = "#1e439415"; // Light blue background color.
+                otherRaceRoundTab.style.cursor = "default";
+                raceRoundBody.style.display = 'block';
+            } else {
+                // This round was not selected.
+                otherRaceRoundTab.style.background = 'white';
+                otherRaceRoundTab.style.cursor = "pointer";
+                raceRoundBody.style.display = 'none';
             }
-            // console.log(event.srcElement.id);
-        })
-    }
-    // When the page loads, the first round is selected.
-    document.querySelector(".round-toggle-btn").click();
+        }
+    })
+}
+// When the page loads, the first round is selected.
+raceRoundTabs[0].click();
 
-    for (const timeInfo of document.querySelectorAll(".time-info")) {
-        timeInfo.addEventListener('click', (event) => {
-            for (const timeId of document.querySelectorAll(".time-info")) {
-                const timeBodyInfo = document.querySelector(`#${timeId.id}-body`);
-                if (event.srcElement.id == timeId.id) {
-                    const currDisplayStyle = timeBodyInfo.style.display;
-                    // Toggle visibilty of time info when button clicked.
-                    timeBodyInfo.style.display = currDisplayStyle == 'table-cell' ? 'none' : 'table-cell';
-                } else {
-                    // Close all other open event infos.
-                    timeBodyInfo.style.display = 'none';
-                }
+const raceRankingButtons = [];
+'{% for round in include.race-info.rounds %}'
+    '{% for event in round.events %}'
+        raceRankingButtons.push(
+            document.querySelector('#{{ event.eventName | append: round.roundName | append: raceId | remove: " " }}'));
+    '{% endfor %}'
+'{% endfor %}'
+console.log(raceRankingButtons);
+// const raceRankingButtons = document.querySelectorAll(".event_ranking{{ raceId }}");
+for (const raceRankingButton of raceRankingButtons) {
+    console.log('hi')
+    raceRankingButton.addEventListener('click', () => {
+        // When a race event button is pressed, go through all the race event tables
+        // and toggle their visibility. Set the race event body corresponding to the
+        // pressed button and turn its visibility on, and turn off other race events'
+        // visibiilties.
+        for (const otherRaceRankingButton of raceRankingButtons) {
+            const raceRankingBody = document.querySelector(`#${otherRaceRankingButton.id}-body`);
+            if (raceRankingButton.id == otherRaceRankingButton.id) {
+                const currDisplayStyle = raceRankingBody.style.display;
+                // Toggle visibilty of time info when button clicked.
+                raceRankingBody.style.display = currDisplayStyle == 'table-cell' ? 'none' : 'table-cell';
+            } else {
+                // Close all other open event infos.
+                raceRankingBody.style.display = 'none';
             }
-        })
-    }
+        }
+    })
+}
 </script>
