--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,7 @@
 </head>
 
 <body>
-    <!-- {% include header.html %} -->
-	{% include side-nav.html %}
+	{% include side-nav.liquid %}
 
     {{ content }}
 </body>
